// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshots should render without crashing with props {"loading":false,"authenticated":false,"finished":false} 1`] = `
<Fragment>
  <Suspense
    fallback={<Loading />}
  >
    <lazy />
  </Suspense>
</Fragment>
`;

exports[`App snapshots should render without crashing with props {"loading":false,"authenticated":true,"finished":true} 1`] = `
<Fragment>
  <Suspense
    fallback={<Loading />}
  >
    <lazy />
  </Suspense>
</Fragment>
`;

exports[`App snapshots should render without crashing with props {"loading":true,"authenticated":false,"finished":false} 1`] = `
<Fragment>
  <LoadingOverlay />
  <Suspense
    fallback={<Loading />}
  >
    <lazy />
  </Suspense>
</Fragment>
`;

exports[`App snapshots should render without crashing with props {"loading":true,"authenticated":true,"finished":false} 1`] = `
<Fragment>
  <LoadingOverlay />
  <div>
    <div>
      <Alert
        message="Somehow concerts are not loaded."
        showIcon={true}
        type="warning"
      />
      <Button
        block={false}
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[Function]}
        type="primary"
      >
        Try Again
      </Button>
    </div>
  </div>
</Fragment>
`;
